Add note about restricted methods warning